feat: get users by ids gateway
