# grpc-gateway/dto_user_service.go
@@ -1,5 +1,5 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-09 12:09:49
+// Generated at: 2024-04-10 01:10:28
 
 package main
 
@@ -13,6 +13,11 @@ type userServiceV1GetResponseDto struct {
 type userServiceV1GetAllResponseDto struct {
 	ResponseDto
 	Payload userpb.V1GetAllResponse
+}
+
+type userServiceV1GetByIDsResponseDto struct {
+	ResponseDto
+	Payload userpb.V1GetByIDsResponse
 }
 
 type userServiceV1LoginResponseDto struct {
