# grpc-gateway/router_message_service.go
@@ -1,5 +1,5 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-09 12:09:49
+// Generated at: 2024-04-10 01:10:28
 
 package main
 
@@ -30,5 +30,10 @@ func (r *router) messageServiceRouter(v fiber.Router) {
 		"/room/:RoomID/messages",
 		AuthMiddleware(r.userServiceClient),
 		r.messageServiceHandler.V1GetRoomMessages,
+	)
+	v.Get(
+		"/chat",
+		AuthMiddleware(r.userServiceClient),
+		r.messageServiceHandler.V1GetUserChats,
 	)
 }
