# grpc-gateway/router_user_service.go
@@ -1,5 +1,5 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-09 12:09:49
+// Generated at: 2024-04-10 01:10:28
 
 package main
 
@@ -7,14 +7,19 @@ import "github.com/gofiber/fiber/v2"
 
 func (r *router) userServiceRouter(v fiber.Router) {
 	v.Get(
+		"/:userID",
+		AuthMiddleware(r.userServiceClient),
+		r.userServiceHandler.V1Get,
+	)
+	v.Get(
 		"/all",
 		AuthMiddleware(r.userServiceClient),
 		r.userServiceHandler.V1GetAll,
 	)
-	v.Get(
-		"/:userID",
+	v.Post(
+		"/v1-get-by-i-ds",
 		AuthMiddleware(r.userServiceClient),
-		r.userServiceHandler.V1Get,
+		r.userServiceHandler.V1GetByIDs,
 	)
 	v.Post(
 		"/login",
